2021-01-01  1.06  (Phil M Perry)  UNRELEASED

  README.md, INFO/kp.html, lib/Text/KnuthPlass.pm, MANIFEST
   2021 copyright. NOT archiving Changes, yet. kp.html moved to INFO/.

  MANIFEST, kp.html, RoadMap, .gitignore, lib/Text/KnuthPlass.pm
   Ship documentation (POD) kp.html (also on GitHub). 
    Roadmap/discussions/thoughts (RoadMap) in public on GitHub (Read-Only).

2020-12-29  1.05  (Phil M Perry)

  examples/KP.pl
   Fix superfluous hyphen when splitting at an existing hyphen. It is not clear
    whether this is the best practice, or that it would be better to handle
    this "upstream" in KnuthPlass.pm. Also, other hyphens and dashes do not
    seem to be well handled.

  META.yml, README.md
   Clean up support-related email addresses and pages.

  README.md  remove example code (is still found in examples/KP.pl) to 
    shorten this file to a reasonable length.

  META.yml
   Add repository (GitHub) and bugtracker (GitHub) entries. Want to cut over
    to GitHub because RT ticket system is going away in March.

  t/02-javascript.t
   Got another floating point failure (long double or quadmath), so went 
    ahead and rounded the rest of the floating point constants in that test.

2020-12-10  1.04  (Phil M Perry)

  Makefile.PL removed, Build.PL, META.yml, MANIFEST, README.md
   Revert to use of Build.PL.

2020-12-09  1.03  (Phil M Perry)

  Makefile.PL, Build.PL, MANIFEST
   Change build process to use Makefile.PL instead of Build.PL

  t/02-javascript.t
   Fix failing t-tests due to use of long-double or quadmath libraries (more
    precision than the t-test was providing). There are still many failures
    of this test on every Solaris box, but at the moment I have no way to
    try to debug on that platform (I will be looking for volunteers to help
    out with this).

  lib/Text/KnuthPlass.xs
   Fix failing Windows t-tests where libraries already contained an _unlink
    module (rename to _unlinkKP).

  Build.PL, README.md, MANIFEST