@@ -1,199 +1,233 @@
-<?xml version="1.0" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title></title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rev="made" href="mailto:" />
+<html><head><title>Text::KnuthPlass</title>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" >
 </head>
+<body class='pod'>
+<!--
+  generated by Pod::Simple::HTML v3.42,
+  using Pod::Simple::PullParser v3.42,
+  under Perl v5.026001 at Mon Jan  4 00:04:58 2021 GMT.
 
-<body>
+ If you want to change this HTML document, you probably shouldn't do that
+   by changing it directly.  Instead, see about changing the calling options
+   to Pod::Simple::HTML, and/or subclassing Pod::Simple::HTML,
+   then reconverting this document from the Pod source.
+   When in doubt, email the author of Pod::Simple::HTML for advice.
+   See 'perldoc Pod::Simple::HTML' for more info.
 
+-->
 
+<!-- start doc -->
+<a name='___top' class='dummyTopAnchor' ></a>
 
-<ul id="index">
-  <li><a href="#NAME">NAME</a></li>
-  <li><a href="#SYNOPSIS">SYNOPSIS</a></li>
-  <li><a href="#METHODS">METHODS</a>
-    <ul>
-      <li><a href="#new">new</a></li>
-      <li><a href="#typeset">typeset</a></li>
-      <li><a href="#break_text_into_nodes">break_text_into_nodes</a></li>
-      <li><a href="#break">break</a></li>
-      <li><a href="#breakpoints_to_lines">breakpoints_to_lines</a></li>
-      <li><a href="#glueclass">glueclass</a></li>
-      <li><a href="#penaltyclass">penaltyclass</a></li>
-    </ul>
-  </li>
-  <li><a href="#AUTHOR">AUTHOR</a></li>
-  <li><a href="#ACKNOWLEDGEMENTS">ACKNOWLEDGEMENTS</a></li>
-  <li><a href="#BUGS">BUGS</a></li>
-  <li><a href="#COPYRIGHT-LICENSE">COPYRIGHT &amp; LICENSE</a></li>
+<div class='indexgroup'>
+<ul   class='indexList indexList1'>
+  <li class='indexItem indexItem1'><a href='#NAME'>NAME</a>
+  <li class='indexItem indexItem1'><a href='#SYNOPSIS'>SYNOPSIS</a>
+  <li class='indexItem indexItem1'><a href='#METHODS'>METHODS</a>
+  <ul   class='indexList indexList2'>
+    <li class='indexItem indexItem2'><a href='#new'>new</a>
+    <li class='indexItem indexItem2'><a href='#typeset'>typeset</a>
+    <li class='indexItem indexItem2'><a href='#break_text_into_nodes'>break_text_into_nodes</a>
+    <li class='indexItem indexItem2'><a href='#break'>break</a>
+    <li class='indexItem indexItem2'><a href='#breakpoints_to_lines'>breakpoints_to_lines</a>
+    <li class='indexItem indexItem2'><a href='#glueclass'>glueclass</a>
+    <li class='indexItem indexItem2'><a href='#penaltyclass'>penaltyclass</a>
+  </ul>
+  <li class='indexItem indexItem1'><a href='#AUTHOR'>AUTHOR</a>
+  <li class='indexItem indexItem1'><a href='#ACKNOWLEDGEMENTS'>ACKNOWLEDGEMENTS</a>
+  <li class='indexItem indexItem1'><a href='#BUGS'>BUGS</a>
+  <li class='indexItem indexItem1'><a href='#COPYRIGHT_%26_LICENSE'>COPYRIGHT &#38; LICENSE</a>
 </ul>
+</div>
 
-<h1 id="NAME">NAME</h1>
+<h1><a class='u' href='#___top' title='click to go to top of document'
+name="NAME"
+>NAME</a></h1>
 
 <p>Text::KnuthPlass - Breaks paragraphs into lines using the TeX algorithm</p>
 
-<h1 id="SYNOPSIS">SYNOPSIS</h1>
+<h1><a class='u' href='#___top' title='click to go to top of document'
+name="SYNOPSIS"
+>SYNOPSIS</a></h1>
 
-<pre><code>    use Text::KnuthPlass;
-    my $typesetter = Text::KnuthPlass-&gt;new();
-    my @lines = $typesetter-&gt;typeset($paragraph);
-    ...</code></pre>
+<pre>    use Text::KnuthPlass;
+    my $typesetter = Text::KnuthPlass-&#62;new();
+    my @lines = $typesetter-&#62;typeset($paragraph);
+    ...</pre>
 
 <p>To use with plain text:</p>
 
-<pre><code>    for (@lines) {
-        for (@{$_-&gt;{nodes}}) {
-            if ($_-&gt;isa(&quot;Text::KnuthPlass::Box&quot;)) { print $_-&gt;value }
-            elsif ($_-&gt;isa(&quot;Text::KnuthPlass::Glue&quot;)) { print &quot; &quot; }
+<pre>    for (@lines) {
+        for (@{$_-&#62;{nodes}}) {
+            if ($_-&#62;isa(&#34;Text::KnuthPlass::Box&#34;)) { print $_-&#62;value }
+            elsif ($_-&#62;isa(&#34;Text::KnuthPlass::Glue&#34;)) { print &#34; &#34; }
         }
-        if ($_-&gt;{nodes}[-1]-&gt;is_penalty) { print &quot;-&quot; }
-        print &quot;\n&quot;;
-    }</code></pre>
+        if ($_-&#62;{nodes}[-1]-&#62;is_penalty) { print &#34;-&#34; }
+        print &#34;\n&#34;;
+    }</pre>
 
 <p>To use with PDF::Builder: (as well as PDF::API2)</p>
 
-<pre><code>    my $text = $page-&gt;text;
-    $text-&gt;font($font, 12);
-    $text-&gt;lead(13.5);
+<pre>    my $text = $page-&#62;text;
+    $text-&#62;font($font, 12);
+    $text-&#62;lead(13.5);
 
-    my $t = Text::KnuthPlass-&gt;new(
-        measure =&gt; sub { $text-&gt;advancewidth(shift) }, 
-        linelengths =&gt; [235]
+    my $t = Text::KnuthPlass-&#62;new(
+        measure =&#62; sub { $text-&#62;advancewidth(shift) }, 
+        linelengths =&#62; [235]
     );
-    my @lines = $t-&gt;typeset($paragraph);
+    my @lines = $t-&#62;typeset($paragraph);
 
     my $y = 500;
     for my $line (@lines) {
         $x = 50; 
-        for my $node (@{$line-&gt;{nodes}}) {
-            $text-&gt;translate($x,$y);
-            if ($node-&gt;isa(&quot;Text::KnuthPlass::Box&quot;)) {
-                $text-&gt;text($node-&gt;value);
-                $x += $node-&gt;width;
-            } elsif ($node-&gt;isa(&quot;Text::KnuthPlass::Glue&quot;)) {
-                $x += $node-&gt;width + $line-&gt;{ratio} *
-                    ($line-&gt;{ratio} &lt; 0 ? $node-&gt;shrink : $node-&gt;stretch);
+        for my $node (@{$line-&#62;{nodes}}) {
+            $text-&#62;translate($x,$y);
+            if ($node-&#62;isa(&#34;Text::KnuthPlass::Box&#34;)) {
+                $text-&#62;text($node-&#62;value);
+                $x += $node-&#62;width;
+            } elsif ($node-&#62;isa(&#34;Text::KnuthPlass::Glue&#34;)) {
+                $x += $node-&#62;width + $line-&#62;{ratio} *
+                    ($line-&#62;{ratio} &#60; 0 ? $node-&#62;shrink : $node-&#62;stretch);
             }
         }
-        if ($line-&gt;{nodes}[-1]-&gt;is_penalty) { $text-&gt;text(&quot;-&quot;) }
-        $y -= $text-&gt;lead();
-    }</code></pre>
+        if ($line-&#62;{nodes}[-1]-&#62;is_penalty) { $text-&#62;text(&#34;-&#34;) }
+        $y -= $text-&#62;lead();
+    }</pre>
 
-<h1 id="METHODS">METHODS</h1>
+<h1><a class='u' href='#___top' title='click to go to top of document'
+name="METHODS"
+>METHODS</a></h1>
 
-<h2 id="new">new</h2>
+<h2><a class='u' href='#___top' title='click to go to top of document'
+name="new"
+>new</a></h2>
 
 <p>The constructor takes a number of options. The most important ones are:</p>
 
 <dl>
+<dt><a name="measure"
+>measure</a></dt>
 
-<dt id="measure">measure</dt>
 <dd>
-
 <p>A subroutine reference to determine the width of a piece of text. This defaults to <code>length(shift)</code>, which is what you want if you&#39;re typesetting plain monospaced text. You will need to change this to plug into your font metrics if you&#39;re doing something graphical.</p>
 
-</dd>
-<dt id="linelengths">linelengths</dt>
-<dd>
+<dt><a name="linelengths"
+>linelengths</a></dt>
 
+<dd>
 <p>This is an array of line lengths. For instance, <code> [30,40,50] </code> will typeset a triangle-shaped piece of text with three lines. What if the text spills over to more than three lines? In that case, the final value in the array is used for all further lines. So to typeset an ordinary block-shaped column of text, you only need specify an array with one value: the default is <code> [78] </code>.</p>
 
-</dd>
-<dt id="tolerance">tolerance</dt>
-<dd>
+<dt><a name="tolerance"
+>tolerance</a></dt>
 
+<dd>
 <p>How much leeway we have in leaving wider spaces than the algorithm would prefer.</p>
 
-</dd>
-<dt id="hyphenator">hyphenator</dt>
-<dd>
+<dt><a name="hyphenator"
+>hyphenator</a></dt>
 
+<dd>
 <p>An object which hyphenates words. If you have <code>Text::Hyphen</code> installed (highly recommended) then a <code>Text::Hyphen</code> object is instantiated by default; if not, an object of the class <code>Text::KnuthPlass::DummyHyphenator</code> is instantiated - this simply finds no hyphenation points at all. So to turn hyphenation off, set</p>
 
-<pre><code>    hyphenator =&gt; Text::KnuthPlass::DummyHyphenator-&gt;new()</code></pre>
+<pre>    hyphenator =&#62; Text::KnuthPlass::DummyHyphenator-&#62;new()</pre>
 
 <p>To typeset non-English text, pass in an object which responds to the <code>hyphenate</code> method, returning a list of hyphen positions. (See <code>Text::Hyphen</code> for the interface.)</p>
-
 </dd>
 </dl>
 
 <p>There are other options for fine-tuning the output. If you know your way around TeX, dig into the source to find out what they are.</p>
 
-<h2 id="typeset">typeset</h2>
+<h2><a class='u' href='#___top' title='click to go to top of document'
+name="typeset"
+>typeset</a></h2>
 
 <p>This is the main interface to the algorithm, made up of the constituent parts below. It takes a paragraph of text and returns a list of lines if suitable breakpoints could be found.</p>
 
 <p>The list has the following structure:</p>
 
-<pre><code>    (
-        { nodes =&gt; \@nodes, ratio =&gt; $ratio },
-        { nodes =&gt; \@nodes, ratio =&gt; $ratio },
+<pre>    (
+        { nodes =&#62; \@nodes, ratio =&#62; $ratio },
+        { nodes =&#62; \@nodes, ratio =&#62; $ratio },
         ...
-    )</code></pre>
+    )</pre>
 
 <p>The node list in each element will be a list of objects. Each object will be either <code>Text::KnuthPlass::Box</code>, <code>Text::KnuthPlass::Glue</code> or <code>Text::KnuthPlass::Penalty</code>. See below for more on these.</p>
 
 <p>The <code>ratio</code> is the amount of stretch or shrink which should be applied to each glue element in this line. The corrected width of each glue node should be:</p>
 
-<pre><code>    $node-&gt;width + $line-&gt;{ratio} *
-        ($line-&gt;{ratio} &lt; 0 ? $node-&gt;shrink : $node-&gt;stretch);</code></pre>
+<pre>    $node-&#62;width + $line-&#62;{ratio} *
+        ($line-&#62;{ratio} &#60; 0 ? $node-&#62;shrink : $node-&#62;stretch);</pre>
 
-<p>Each box, glue or penalty node has a <code>width</code> attribute. Boxes have <code>value</code>s, which are the text which went into them; glue has <code>stretch</code> and <code>shrink</code> to determine how much it should vary in width. That should be all you need for basic typesetting; for more, see the source, and see the original Knuth-Plass paper in &quot;Digital Typography&quot;.</p>
+<p>Each box, glue or penalty node has a <code>width</code> attribute. Boxes have <code>value</code>s, which are the text which went into them; glue has <code>stretch</code> and <code>shrink</code> to determine how much it should vary in width. That should be all you need for basic typesetting; for more, see the source, and see the original Knuth-Plass paper in &#34;Digital Typography&#34;.</p>
 
-<p>Why <i>typeset</i> rather than something like <i>linesplit</i>? Per <a href="#ACKNOWLEDGEMENTS">&quot;ACKNOWLEDGEMENTS&quot;</a>, this code is ported from the Javascript product <b>typeset</b>.</p>
+<p>Why <i>typeset</i> rather than something like <i>linesplit</i>? Per <a href="#ACKNOWLEDGEMENTS" class="podlinkpod"
+>&#34;ACKNOWLEDGEMENTS&#34;</a>, this code is ported from the Javascript product <b>typeset</b>.</p>
 
 <p>This method is a thin wrapper around the three methods below.</p>
 
-<h2 id="break_text_into_nodes">break_text_into_nodes</h2>
+<h2><a class='u' href='#___top' title='click to go to top of document'
+name="break_text_into_nodes"
+>break_text_into_nodes</a></h2>
 
 <p>This turns a paragraph into a list of box/glue/penalty nodes. It&#39;s fairly basic, and designed to be overloaded. It should also support multiple justification styles (centering, ragged right, etc.) but this will come in a future release; right now, it just does full justification.</p>
 
 <p>If you are doing clever typography or using non-Western languages you may find that you will want to break text into nodes yourself, and pass the list of nodes to the methods below, instead of using this method.</p>
 
-<h2 id="break">break</h2>
+<h2><a class='u' href='#___top' title='click to go to top of document'
+name="break"
+>break</a></h2>
 
 <p>This implements the main body of the algorithm; it turns a list of nodes (produced from the above method) into a list of breakpoint objects.</p>
 
-<h2 id="breakpoints_to_lines">breakpoints_to_lines</h2>
+<h2><a class='u' href='#___top' title='click to go to top of document'
+name="breakpoints_to_lines"
+>breakpoints_to_lines</a></h2>
 
 <p>And this takes the breakpoints and the nodes, and assembles them into lines.</p>
 
-<h2 id="glueclass">glueclass</h2>
+<h2><a class='u' href='#___top' title='click to go to top of document'
+name="glueclass"
+>glueclass</a></h2>
 
-<h2 id="penaltyclass">penaltyclass</h2>
+<h2><a class='u' href='#___top' title='click to go to top of document'
+name="penaltyclass"
+>penaltyclass</a></h2>
 
 <p>For subclassers.</p>
 
-<h1 id="AUTHOR">AUTHOR</h1>
+<h1><a class='u' href='#___top' title='click to go to top of document'
+name="AUTHOR"
+>AUTHOR</a></h1>
 
-<p>originally written by Simon Cozens, <code>&lt;simon at cpan.org&gt;</code></p>
+<p>originally written by Simon Cozens, <code>&#60;simon at cpan.org&#62;</code></p>
 
 <p>since 2020, maintained by Phil Perry</p>
 
-<h1 id="ACKNOWLEDGEMENTS">ACKNOWLEDGEMENTS</h1>
+<h1><a class='u' href='#___top' title='click to go to top of document'
+name="ACKNOWLEDGEMENTS"
+>ACKNOWLEDGEMENTS</a></h1>
 
-<p>This module is a Perl translation of Bram Stein&#39;s &quot;Typeset&quot; Javascript Knuth-Plass implementation. Any bugs, however, are probably my fault.</p>
+<p>This module is a Perl translation of Bram Stein&#39;s &#34;Typeset&#34; Javascript Knuth-Plass implementation. Any bugs, however, are probably my fault.</p>
 
-<h1 id="BUGS">BUGS</h1>
+<h1><a class='u' href='#___top' title='click to go to top of document'
+name="BUGS"
+>BUGS</a></h1>
 
 <p>Please report any bugs or feature requests to the <i>issues</i> section of <code>https://github.com/PhilterPaper/Text-KnuthPlass</code>.</p>
 
 <p>Do NOT under ANY circumstances open a PR (Pull Request) to report a bug. It is a waste of both your and our time and effort. Open a regular ticket (issue), and attach a Perl (.pl) program illustrating the problem, if possible. If you believe that you have a program patch, and offer to share it as a PR, we may give the go-ahead. Unsolicited PRs may be closed without further action.</p>
 
-<h1 id="COPYRIGHT-LICENSE">COPYRIGHT &amp; LICENSE</h1>
+<h1><a class='u' href='#___top' title='click to go to top of document'
+name="COPYRIGHT_&#38;_LICENSE"
+>COPYRIGHT &#38; LICENSE</a></h1>
 
 <p>Copyright (c) 2011 Simon Cozens.</p>
 
-<p>Copyright (c) 2020-2021 Phil M Perry.</p>
+<p>Copyright (c) 2020 Phil M Perry.</p>
 
 <p>This program is released under the following license: Perl, GPL</p>
 
+<!-- end doc -->
 
-</body>
-
-</html>
-
-
+</body></html>
