@@ -15,5 +15,6 @@ t/pod.t
 tools/1_pc.pl
 tools/2_t-tests.pl
 tools/3_examples.pl
+tools/pod2cpanhtml.pl
 examples/KP.pl
 META.yml
